<resources>
    <string name="app_name">NailExpress</string>
    <string name="btn_cancel">Hủy</string>
    <string name="btn_confirm">Xác nhận</string>
    <string name="btn_confirm_call">Vâng, Tiếp tục</string>
    <string name="btn_yes_delete">Có, xóa ngay</string>
    <string name="error">Đã có lỗi xảy ra</string>
    <string name="error_not_connect_network">Không có kết nối mạng, hoặc kết nối không ổn định. Vui lòng kiểm tra lại đường truyền mạng và thử lại.</string>
    <string name="retry">Thử lại</string>
    <string name="unknown">Chưa xác định được lỗi</string>
    <string name="btn_ok">Đồng ý</string>
    <string name="notification">Thông báo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nails_express">Nails Express</string>
    <string name="phone">Số điện thoại</string>
    <string name="hint_phone">Nhập vào số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="show">Hiện</string>
    <string name="hide">Ẩn</string>
    <string name="login">Đăng nhập</string>
    <string name="not_have_account">Bạn chưa có tài khoản ?</string>
    <string name="click_here_to_signup"><u>Nhấn vào đây để đăng ký</u></string>
    <string name="forgot_pass">Bạn đã quên mật khẩu ?</string>
    <string name="hint_pass">Nhập vào mật khẩu</string>
    <string name="hint_old_pass">Nhập vào mật khẩu cũ</string>
    <string name="hint_new_pass">Nhập vào mật khẩu mới</string>
    <string name="register_des_1">Ban hãy nhập số điện thoại để tiến hành\nđăng ký tài khoản</string>
    <string name="hint_type_phone">Nhập Số Điện Thoại để xác thực</string>
    <string name="register_des_2">Chúng tôi sẽ gửi một mã OTP gồm 6 chữ số đến số điện thoại trên để xác nhận số điện thoại này là của bạn.</string>
    <string name="register_des_3">Bạn chưa nhận được mã OTP ? Gửi lại mã OTP sau 60 giây</string>
    <string name="register_des_4"><u>Gửi lại mã xác nhận</u></string>
    <string name="btn_next">Tiếp tục</string>
    <string name="back_home">Trở về trang chủ</string>
    <string name="login_des_1"><u>Nhấn vào đây để lấy lại mật khẩu</u></string>
    <string name="error_blank_phone">Hãy điền số điện thoại</string>
    <string name="error_blank_salon_year">Hãy nhập số năm hoạt động</string>
    <string name="error_blank_salon_phone">Hãy điền số điện thoại</string>
    <string name="error_blank_name">Hãy điền tên của bạn</string>
    <string name="error_blank_salon_name">Hãy điền tên salon</string>
    <string name="error_blank_password">Mật khẩu không được để trống</string>
    <string name="error_type_pass_not_enough">Mật khẩu phải nhập đủ 6 số</string>
    <string name="error_empty_field">Trường này không được để trống</string>
    <string name="error_type_phone_not_enough">Số điện thoại phải nhập đủ 10 số</string>
    <string name="error_length_title">Tiêu đề phải chứa ít nhất 6 ký tự</string>
    <string name="error_empty_title">Tiêu đề không được để trống</string>
    <string name="error_empty_address">Khu vực làm việc không được để trống</string>
    <string name="error_select_gender">Vui lòng chọn giới tính</string>
    <string name="error_empty_experience">Số năm kinh nghiệm không được để trống</string>
    <string name="error_empty_service_name">Bạn phần điền tên dịch vụ</string>
    <string name="error_empty_service_price">Bạn phần điền giá dịch vụ</string>
    <string name="error_empty_customer_name">Tên khách hàng không được để trống</string>
    <string name="error_empty_customer_phone">Số điện thoại khách hàng không được để trống</string>
    <string name="error_empty_phone">Số điện thoại không được để trống</string>
    <string name="error_skill_empty">Bạn phải chọn cách trả lương</string>
    <string name="register_des_5">Nhập mã gồm 6 chữ số để xác minh</string>
    <string name="auth_otp_loading">Đang xác minh mã OTP của bạn…</string>
    <string name="verify_des_3">Chúng tôi đã gửi mã OTP về số điện thoại</string>
    <string name="verify_des_4">Hãy điền mã OTP để tiếp tục</string>
    <string name="auth_otp_resend_in_remaining_s">Gửi lại mã code sau %s giây</string>
    <string name="auth_otp_sending">Đang gửi mã xác nhận</string>
    <string name="auth_otp_resend">Gửi lại mã OTP</string>
    <string name="btnBack">Trở về</string>
    <string name="name_field">Tên của bạn là gì?</string>
    <string name="hint_name">Nhập vào họ tên</string>
    <string name="password_2">Mật khẩu (ít nhất 8 ký tự)</string>
    <string name="sign_up">Đăng ký</string>
    <string name="select_role_des_1">Vui lòng cho chúng tôi biết bạn là KHÁCH (CHỦ TIỆM) ĐANG CẦN TÌM THỢ hay là THỢ NAILS ĐANG CẦN VIỆC LÀM</string>
    <string name="select_role_des_2">Lưu ý: Mỗi vai trò sẽ có chức năng khác nhau với mục đích sử dụng khác nhau. Sau khi đã chọn vai trò, bạn vẫn có thể vào menu Tài Khoản để thay đổi vai trò của mình.</string>
    <string name="home_customer_tab_1">Danh sách thợ đặt</string>
    <string name="home_customer_tab_2">Thợ đã đặt</string>
    <string name="bt_book_staff">Đặt thợ</string>
    <string name="view_detail">Xem chi tiết</string>
    <string name="gender_male">Nam</string>
    <string name="gender_female">Nữ</string>
    <string name="display_distance">Cách vị trí của bạn %s mi</string>
    <string name="year_exper">%d năm</string>
    <string name="num_of_workers">%d thợ</string>
    <string name="no_xuyen_bang">Không xuyên bang</string>
    <string name="xuyen_bang">Xuyên bang</string>
    <string name="item_staff_des_1">Khu vực làm việc</string>
    <string name="lbl_storage_permission">Storage Permission</string>
    <string name="lbl_enable_storage_permission">You must enable storage permission in the app to continue downloading mp3 ringtones to your device</string>
    <string name="permission_download_denied">You must provide [folder] access when downloading to your phone mp3 </string>
    <string name="exception_json_parse">The error occurs when there is an error in parsing the JSON received from the server.\n</string>
    <string name="exception_http">An error occurred when a failed response code was received from the server.</string>
    <string name="ssl_hands_hake">The error occurs when there is a problem with SSL/TLS authentication when establishing a secure connection.</string>
    <string name="exception_socket">An error occurred while using the socket to establish and maintain a network connection</string>
    <string name="lbl_do_you_want_try_again">Do you want to try again?</string>
    <string name="exception_no_internet">Exception No internet connection</string>
    <string name="exception_ioe">An error occurs when there is a problem in reading or writing data from a source or to an offline destination, such as a file, socket, data stream.</string>
    <string name="exception_time_out_error">Exception Timeout error occurred</string>
    <string name="exception_you_do_not_have_access">Exception you do not have access</string>
    <string name="exception_format_error">Exception Format error occurred</string>
    <string name="exception_there_is_no_address">Exception there is no address associated with the server</string>
    <string name="exception_value_is_not_a_type_of_data">Exception value is not a type of data</string>
    <string name="exception_unexpected_error">Exception Unexpected error occurred</string>
    <string name="exception_unauthorised_request">Exception Unauthorised request</string>
    <string name="null_error">This field require not null</string>
    <string name="email_error">Email is not valid</string>
    <string name="password_error">Password must input at least 6 character</string>
    <string name="phone_error">Phone number is not valid</string>
    <string name="name_is_not_valid">User Name is not valid</string>
    <string name="address_error">Address is not valid</string>
    <string name="authorization_required">Authorization Required</string>
    <string name="you_dont_have_permission_to_access">You don’t have permission to access [directory] on this server</string>
    <string name="not_found_url">Not found url</string>
    <string name="exception_error_due_to_a_conflict">Exception Error due to a conflict</string>
    <string name="exception_connection_request_timeout">Exception Connection request timeout</string>
    <string name="exception_internal_server">Exception Internal Server Error</string>
    <string name="exception_service_unavailable">Exception Service unavailable</string>
    <string name="exception_receive_invalid_status_code">Exception Received invalid status code:=</string>
    <string name="statusCode">statusCode</string>
    <string name="media_network_or_file_error">File or network related operational error.</string>
    <string name="media_error_unknow">Unknown media player error. </string>
    <string name="media_error_server_died">Media server is dead, reboot</string>
    <string name="media_error_not_valid">Invalid file or video</string>
    <string name="media_error_malformed">Invalid file encryption</string>
    <string name="media_time_out">Running over time</string>
    <string name="home_des_1">Trang chủ</string>
    <string name="hint_search_area">Tìm kiếm theo khu vực</string>
    <string name="staff_infor">Thông tin thợ</string>
    <string name="staff_salary">Mức lương</string>
    <string name="list_service">Danh sách Theo dịch vụ</string>
    <string name="list_service_by_time">Danh sách theo thời gian (%s)</string>
    <string name="describe_yourself">Mô tả về bản thân</string>
    <string name="title_detail_staff">Thông tin chi tiết thợ</string>
    <string name="title_create_recruitment">Đăng tìm thợ</string>
    <string name="title_booking_staff_now">Đặt thợ ngay</string>
    <string name="salon_name">Tên salon</string>
    <string name="hint_salon_name">Nhập tên salon</string>
    <string name="salon_phone">Số điện thoại salon</string>
    <string name="hint_salon_phone">Nhập số điện thoại salon</string>
    <string name="salon_address">Địa chỉ salon</string>
    <string name="hint_address">Nhập địa chi</string>
    <string name="salon_residence">Salon đã hoạt động trong</string>
    <string name="customer_color">Khách tiệm đa số thuộc sắc dân</string>
    <string name="hint_salon_operation">Nhập số năm hoạt động</string>
    <string name="staff_home">Chỗ ở cho thợ</string>
    <string name="salon_des">Mô tả về salon</string>
    <string name="salon_image">Hình ảnh về salon</string>
    <string name="load_image">Tải ảnh</string>
    <string name="year">năm</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="retype_pass">Nhập lại mật khẩu mới</string>
    <string name="salon_car">Xe đưa đón thợ đi làm</string>
    <string name="job_information">Thông tin Việc làm</string>
    <string name="experience">Kinh nghiệm</string>
    <string name="gender">Giới tính</string>
    <string name="salary">Mức lương</string>
    <string name="time">Thời gian</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="list_services">Danh sách dịch vụ</string>
    <string name="my_cv">CV của tôi</string>
    <string name="worker_info">Thông tin thợ</string>
    <string name="work_area">Khu vực làm việc</string>
    <string name="lbl_filter">Lọc</string>
    <string name="lbl_choose_gender">Chọn giới tính</string>
    <string name="lbl_gender">Giới tính</string>
    <string name="lbl_choose_expresstion">Chọn kinh nghiệm</string>
    <string name="lbl_expresstion">Kinh nghiệm</string>
    <string name="lbl_choose_city">Chọn thành phố</string>
    <string name="lbl_area_work">Khu vực làm việc</string>
    <string name="lbl_choose_state">Chọn tiểu bang</string>
    <string name="lbl_close">Lọc</string>
    <string name="update_cv">Cập nhật CV</string>
</resources>