<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="action"
            type="com.example.nailexpress.views.ui.main.customer.recruitment.ICreateSalonVM" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.TextViewResponsive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/salon_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSalonName"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/size_10"
            android:hint="@string/hint_salon_name"
            android:text="@={action.salonForm.name}" />

        <TextView
            style="@style/AppTheme.TextViewResponsive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/salon_phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSalonPhone"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/size_10"
            android:hint="@string/hint_salon_phone"
            android:text="@={action.salonForm.phoneDisplay}"
            app:isPhoneUS="@{true}"/>

        <TextView
            style="@style/AppTheme.TextViewResponsive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/salon_address" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSalonAddress"
            style="@style/AppTheme.EditText.MultiLine"
            android:minLines="1"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/size_10"
            android:focusable="false"
            android:hint="@string/hint_address"
            android:text="@{action.salonForm.address}" />

        <TextView
            style="@style/AppTheme.TextViewResponsive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/salon_residence" />

        <com.example.nailexpress.views.widgets.CustomEditText
            android:id="@+id/etYearExist"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginBottom="@dimen/size_10"
            android:hint="@string/hint_salon_operation"
            app:custom_end_text="@string/year"
            app:input_type="number"
            app:max_number_input="1000"
            app:text="@={action.salonForm.experience_years}" />

        <TextView
            style="@style/AppTheme.TextViewResponsive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/customer_color" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_15"
            android:background="@drawable/bg_view_stroke">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spSkinColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/size_40"
                android:paddingHorizontal="@dimen/size_10"
                android:selectedItemPosition="@{action.salonForm.customer_skin_color}"
                app:items="@{@stringArray/arr_skin_color}"
                app:onItemSelected="@{action.onItemColorSelected}" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextViewResponsive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/staff_home" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/ic_thumb"
                app:track="@drawable/track_selector_switch"
                app:value="@={action.salonForm.have_car}" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextViewResponsive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salon_car" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/ic_thumb"
                app:track="@drawable/track_selector_switch"
                app:value="@={action.salonForm.have_place}" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            style="@style/AppTheme.TextViewResponsive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/salon_des" />

        <EditText
            android:id="@+id/etDes"
            style="@style/AppTheme.EditText.MultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5"
            android:maxLines="5"
            android:text="@={action.salonForm.description}" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextViewResponsive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salon_image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btLoadImage"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_40"
                android:backgroundTint="#31FF662E"
                android:text="@string/load_image"
                android:textAllCaps="false"
                android:textColor="@color/color_primary"
                app:cornerRadius="@dimen/size_60"
                app:icon="@drawable/ic_camera"
                app:iconTint="@color/color_primary" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5"
            android:adapter="@{action.salonImageAdapter}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/item_image" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>