<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg"
        android:orientation="vertical">

        <com.example.nailexpress.views.widgets.TopBarMenu
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tbm_isShowOptionMenu="false"
            app:tbm_title="@string/my_cv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_150"
            android:background="@color/color_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBar" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0"
            android:layout_marginHorizontal="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_16"
            android:background="@drawable/bg_white_5"
            app:layout_constraintBottom_toTopOf="@+id/btnUpdateCv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.nailexpress.views.widgets.staff.CvPictureProfile
                    android:id="@+id/cvPictureProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp" />

                <com.example.nailexpress.views.widgets.staff.WorkerInfoView
                    android:id="@+id/workerInfoView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_18"
                    android:layout_marginTop="@dimen/size_14"
                    app:wiv_iconBotLeft="@drawable/ic_bag_exp"
                    app:wiv_iconBotRight="@drawable/ic_location_2"
                    app:wiv_iconTopLeft="@drawable/ic_salary_dollar"
                    app:wiv_iconTopRight="@drawable/ic_phone_orange"
                    app:wiv_title="@string/worker_info"
                    app:wiv_titleBotLeft="@string/experience"
                    app:wiv_titleBotRight="@string/work_area"
                    app:wiv_titleTopLeft="@string/salary"
                    app:wiv_titleTopRight="@string/phone_number" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1"
                    android:layout_marginHorizontal="@dimen/size_18"
                    android:layout_marginTop="@dimen/size_16"
                    android:background="@color/gray" />

                <com.example.nailexpress.views.widgets.staff.ServicesWorkerView
                    android:id="@+id/serviceWorkerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_18"
                    android:layout_marginTop="@dimen/size_12"
                    app:sw_title="@string/list_services" />

                <com.example.nailexpress.views.widgets.JobDescriptionView
                    android:id="@+id/descriptionView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_18"
                    android:layout_marginTop="@dimen/size_18"
                    app:jd_contentTextColor="@color/black"
                    app:jd_title="@string/describe_yourself"
                    app:jd_titleTextColor="@color/colorPrimary" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateCv"
            style="@style/AppTheme.Button.Responsive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/size_16"
            android:paddingHorizontal="@dimen/size_60"
            android:text="@string/update_cv"
            app:cornerRadius="@dimen/size_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>